# dirac-swift-api

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: pyproject.toml
api/src/api/: __init__.py  auth.py  main.py
api/src/api/tests/: test_dummy.py
docker/api/: Dockerfile
src/api/: auth.py  config.py  main.py  virgo_auth.py
src/api/processing/: __init__.py  data_processing.py  masks.py  metadata.py  read_ranges.py  units.py
src/api/routers/: __init__.py  auth.py  file_processing.py
src/api/src/: .gitignore
src/dirac-swift-api/: _version.py  main.py
tests/: .env.test  conftest.py  test_api.py  test_auth.py  test_data_processing.py  test_masks.py  test_metadata.py  test_units.py  test_virgo_auth.py
tests/data/: .env.test  cookies.txt
tests/fixtures/: test_data.py  test_http_requests.py  test_metadata_objects.py  test_output_files.py
