[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[project]
authors = [
    {email = "h.moss@ucl.ac.uk", name = "Harry Moss"},
    {email = "ilektra.christidi@ucl.ac.uk", name = "Ilektra Christidi"},
    {email = "p.andrews-briscoe@ucl.ac.uk", name = "Peter Andrews-Briscoe"},
]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles",
    "fastapi",
    "jinja2",
    "loguru",
    "psycopg2",
    "pydantic",
    "python-dotenv",
    "requests",
    "uvicorn",
]
description = "Repository for the REST API side of the DiRAC-SWIFT project "
keywords = [
]
name = "dirac-swift-api"
optional-dependencies = {dev = [
    "black",
    "build",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "tox",
    "twine",
    "types-requests",
    "types-urllib3",
], test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "tox",
]}
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"
license.file = "LICENCE.md"
urls.homepage = "https://github.com/UCL-ARC/dirac-swift-api"

[tool.coverage]
report = {skip_covered = true, sort = "cover"}
run = {branch = true, parallel = true, source = [
    "dirac-swift-api",
]}
paths.source = [
    "src/api",
    ".tox*/*/lib/python*/site-packages",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
explicit_package_bases = true
follow_imports = "silent"
no_implicit_reexport = true
plugins = [
    "numpy.typing.mypy_plugin",
    "pydantic.mypy",
]
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
force-exclude = true
ignore = [
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D417", # argument description in docstring (unreliable)
]
per-file-ignores = {"test_*" = [
    "S101",
], "tests/*" = [
    "D100",
    "D103",
    "D104",
]}
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C",
    "COM",
    "D",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT",
]
target-version = "py311"
isort.known-first-party = [
    "dirac_swift_api",
]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[tool.tox]
legacy_tox_ini = """
    [gh-actions]
    python =
        3.11: py311

    [testenv]
    commands =
        pytest -ra tests --cov=src/api
    deps =
        pytest
        pytest-cov
        pytest-mock

    [tox]
    env_list =
        py311
"""
